# docs/swagger.yaml
@@ -44,6 +44,29 @@ definitions:
       user_id:
         type: integer
     type: object
+  models.Avaliacao:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      descricao:
+        type: string
+      id:
+        type: integer
+      materia_id:
+        type: integer
+      nome:
+        type: string
+      questoes:
+        items:
+          $ref: '#/definitions/models.Questao'
+        type: array
+      turma_id:
+        type: integer
+      updatedAt:
+        type: string
+    type: object
   models.Professor:
     properties:
       contato:
@@ -85,10 +108,31 @@ definitions:
 host: localhost:8080
 info:
   contact: {}
-  description: A Test API using GO, Gin and Gorm
+  description: Api para criação, correção e execução de Avaliações Escolares
   title: Test API
   version: "1.0"
 paths:
+  /alternativas/{avaliacao_id}:
+    get:
+      parameters:
+      - description: Avaliacao ID
+        format: uuid
+        in: path
+        name: avaliacao_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Alternativa'
+            type: array
+      summary: List questions for a test
+      tags:
+      - Avaliacao
   /alternativas/{questao_id}:
     get:
       parameters:
@@ -348,4 +392,22 @@ paths:
       summary: Cria uma nova Questao
       tags:
       - Questoes
+  /questoes/{id}:
+    delete:
+      parameters:
+      - description: ID da questao a ser deleteda
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Deleta uma questao pelo ID
+      tags:
+      - Questao
 swagger: "2.0"
